--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -21,7 +21,7 @@
             <img src="../img/plus-large-svgrepo-com.svg" style="height: 1em; width: 1em;"></img>
             <span style="font-weight: bold;">New task</span>
             <img src="../img/plus-large-svgrepo-com.svg" style="height: 1em; width: 1em;"></img>
-            <span>Tasks</span>
+            <a href="../../dist/index.html">Tasks</a>
             <img src="../img/plus-large-svgrepo-com.svg" style="height: 1em; width: 1em;"></img>
             <span>Upcoming</span>
             <img src="../img/plus-large-svgrepo-com.svg" style="height: 1em; width: 1em;"></img>
