--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                 </div>
             </li>
 
+            <div class="sidebar-divider"></div>
+
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="#index">
@@ -155,7 +157,7 @@
     <!-- <script src="js/sb-admin-2.min.js"></script> -->
 
     <script src="js/script.js"></script>
-
+    
 
 </body>
 
