--- a/settings.html
+++ b/settings.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="row mt-3 width-100 d-flex" style="justify-content: space-between;">
                         <div class="mt-5 md-6 text-center">
-                            <button class="btn btn-success profile-button me-3" type="button">Save Profile</button>
+                            <button class="btn btn-success profile-button me-3" type="button" data-toggle="modal" data-target="#saveModal">Save Profile</button>
                         </div>
                         <div class="mt-5 md-6 text-center">
                             <button class="btn btn-danger profile-button" type="button" data-toggle="modal" data-target="#logoutModal">Log out</button>
@@ -91,6 +91,26 @@
                     <div class="modal-footer">
                         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                         <a class="btn btn-primary" href="login.html">Logout</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- save profile modal -->
+        <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Are you sure you want to save?</h5>
+                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">Select "Save" below if you are ready to save your new data.</div>
+                    <div class="modal-footer">
+                        <button class="btn btn-danger" type="button" data-dismiss="modal">Cancel</button>
+                        <a class="btn btn-success" href="index.html">Save & return to home</a>
                     </div>
                 </div>
             </div>
