Create register backend

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#settings">
                     <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
-                    <span>Hi, John Doe</span></a>
+                    <span id="greeting">Hi, John Doe</span></a>
             </li>
 
             <div class="sidebar-divider"></div>
@@ -147,7 +147,10 @@
     <!-- <script src="js/sb-admin-2.min.js"></script> -->
 
     <script src="js/script.js"></script>
-
+    <script>
+        const greeting = document.getElementById('greeting');
+        
+    </script>
     
 </body>
 
