--- a/login.html
+++ b/login.html
@@ -19,6 +19,10 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <!-- <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.spapp.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
 </head>
 
@@ -58,9 +62,9 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <a href="index.html" class="btn btn-success btn-user btn-block">
+                                        <button id="loginBtn" class="btn btn-success btn-user btn-block">
                                             Login
-                                        </a>
+                                        </button>
                                        
                                     </form>
                                     <hr>
@@ -83,14 +87,43 @@
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
+    <!-- <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- <script src="vendor/jquery-easing/jquery.easing.min.js"></script> -->
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
+    <!-- <script src="js/sb-admin-2.min.js"></script> -->
+
+    <script>
+        $(document).ready(function() {
+            $('#loginBtn').click(function(e) {
+                e.preventDefault();
+                const email = $('#exampleInputEmail').val();
+                const password = $('#exampleInputPassword').val();
+
+                const data = {
+                    "email": email,
+                    "password": password
+                }
+
+                $.ajax({
+                    type: 'POST',
+                    url: 'api/login',
+                    data: JSON.stringify(data),
+                    dataType: 'json',
+                    success: function(response) {
+                        if(response.success === true){
+                            window.location.href='index.html';
+                        } else{
+                            console.error('Failed to log in');
+                        }
+                    }
+                })
+            })
+        });
+    </script>
 
 </body>
 
