Add session tracking

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#settings">
                     <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
-                    <span id="greeting">Hi, John Doe</span></a>
+                    <span id="greeting">Hi, </span></a>
             </li>
 
             <div class="sidebar-divider"></div>
@@ -148,8 +148,20 @@
 
     <script src="js/script.js"></script>
     <script>
-        const greeting = document.getElementById('greeting');
-        
+        $(document).ready(function() {
+            $.ajax({
+                url: 'api/userDetails',
+                type: 'GET',
+                dataType: 'json',
+                success: function(data){
+                    if (data === null) {
+                        window.location.href="login.html";
+                    } else {
+                        $('#greeting').text('Hi, ' + data.first_name + ' ' + data.last_name);
+                    }
+                }
+            })
+        });      
     </script>
     
 </body>
