--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <a class="btn btn-primary" id="logoutBtn">Logout</a>
                 </div>
             </div>
         </div>
@@ -159,7 +159,25 @@
                     } else {
                         $('#greeting').text('Hi, ' + data.first_name + ' ' + data.last_name);
                     }
-                }
+                },
+                // error: function(xhr, status, error) {
+                //     if(xhr.status === 401){
+                //         window.location.href="login.html";
+                //     } else {
+                //         console.error("Error " + error);
+                //     }
+                // }
+                
+            });
+
+            $('#logoutBtn').click(function() {
+                $.ajax({
+                    url: 'api/logout',
+                    type: 'GET',
+                    success: function(response){
+                        window.location.href="login.html";
+                    }
+                })
             })
         });      
     </script>
