--- a/login.html
+++ b/login.html
@@ -11,7 +11,6 @@
 
     <title>ToDo List Login</title>
 
-    <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -65,6 +64,8 @@
                                         <button id="loginBtn" class="btn btn-success btn-user btn-block">
                                             Login
                                         </button>
+
+                                        <span style="display: none;" class="small text-danger" id="wrongLogin">Wrong username or password</span>
                                        
                                     </form>
                                     <hr>
@@ -102,7 +103,6 @@
                 e.preventDefault();
                 const email = $('#exampleInputEmail').val();
                 const password = $('#exampleInputPassword').val();
-
                 const data = {
                     "email": email,
                     "password": password
@@ -128,6 +128,7 @@
                             
                         } else{
                             console.error('Failed to log in');
+                            $('#wrongLogin').show();
                         }
                     }
                 })
