--- a/viewAll.html
+++ b/viewAll.html
@@ -90,8 +90,7 @@ $(document).ready(function () {
 
                 var liActions = $('<li>').addClass('list-group-item ps-3 pe-0 py-1 rounded-0 border-0 bg-transparent');
                 var actionIcons = $('<div>').addClass('d-flex flex-row justify-content-end');
-                actionIcons.html('<a href="#!" class="text-info" data-mdb-toggle="tooltip" title="Edit todo"><i class="fas fa-pencil-alt mr-3"></i></a>' +
-                                 '<a href="#!" class="text-danger" data-mdb-toggle="tooltip" title="Delete todo"><i class="fas fa-trash-alt"></i></a>');
+                actionIcons.html('<a href="" class="text-info" data-mdb-toggle="tooltip" title="Mark done"><i class="fas fa-check mr-3 mark-done" data-task-id="' + task.ID + '"></i></a>');            
                 liActions.append(actionIcons);
                 var createdDate = new Date(task['due_date']);
                 liActions.append('<div class="text-end text-muted"><a href="#!" class="text-muted" data-mdb-toggle="tooltip" title="Created date"><p class="small mb-0"></i>' + createdDate.toLocaleDateString() + '</p></a></div>');
@@ -101,6 +100,23 @@ $(document).ready(function () {
             });
         }
     });
+    $(document).on('click', '.mark-done', function(e){
+  e.preventDefault();
+  var taskID = $(this).data('task-id');
+  const dataSend = {
+    "task_id": taskID
+  }
+  console.log(taskID);
+  $.ajax({
+    url:'api/mark-done',
+    type:'POST',
+    dataType: 'json',
+    data: JSON.stringify(dataSend),
+    success: function(response){
+      alert('Successfully marked task done');
+    }
+  })
+})
 });
 </script>
   
