--- a/viewAll.html
+++ b/viewAll.html
@@ -114,6 +114,7 @@ $(document).ready(function () {
     data: JSON.stringify(dataSend),
     success: function(response){
       alert('Successfully marked task done');
+      location.reload();
     }
   })
 })
