--- a/register.html
+++ b/register.html
@@ -113,7 +113,7 @@
                 console.log(formData);
                 $.ajax({
                     type: 'POST',
-                    url:'api/register',
+                    url:'rest/routes/register',
                     data: JSON.stringify(formData),
                     dataType: 'json',
                     success: function(response){
