Partially replace session with JWT

--- a/index.html
+++ b/index.html
@@ -146,9 +146,11 @@
     <script src="js/script.js"></script>
     <script>
         $(document).ready(function() {
+            const token = localStorage.getItem("token");
             $.ajax({
                 url: 'rest/routes/userDetails',
-                type: 'GET',
+                type: 'POST',
+                data: JSON.stringify({"token":token}),
                 success: function(data){
                     if (data === null) {
                         window.location.href="register.html";
