Fix some OA and JWT auth

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                     url: 'rest/routes/logout',
                     type: 'GET',
                     success: function(response){
+                        localStorage.removeItem("token");
                         window.location.href="login.html";
                     }
                 })
