Minor fixes & added middleware

--- a/login.html
+++ b/login.html
@@ -122,7 +122,7 @@
                                 data: JSON.stringify({"token": token}),
                                 dataType: 'json',
                                 headers: {
-                                    'Authorization': token
+                                    'Token': token
                                 },
                                 success: function(response){
                                     console.log(response);
