--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
     <script>
         $(document).ready(function() {
             const token = localStorage.getItem("token");
+            if (token == null){
+                window.location.href='login.html';
+            }
             $.ajax({
                 url: 'rest/routes/userDetails',
                 type: 'POST',
