Update logout ajax

--- a/settings.html
+++ b/settings.html
@@ -88,7 +88,7 @@
                     <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                     <div class="modal-footer">
                         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                        <a class="btn btn-primary" href="login.html">Logout</a>
+                        <a class="btn btn-primary" href="#" id="logoutBtn">Logout</a>
                     </div>
                 </div>
             </div>
@@ -131,6 +131,21 @@
     <script>
         $(document).ready(function() {
             const token = localStorage.getItem('token');
+            const logoutBtn = $('#logoutBtn');
+            
+            logoutBtn.click(function() {
+                $.ajax({
+                    url:'rest/routes/logout',
+                    type:'GET',
+                    headers:{'Token':token},
+                    success:function(){
+                        alert('Logged out');
+                        localStorage.removeItem('token');
+                        window.location.href('login.html');
+                    }
+                })
+            });
+
             $.ajax({
                 url: 'rest/routes/userDetails',
                 type: 'GET',
