--- a/settings.html
+++ b/settings.html
@@ -141,7 +141,7 @@
                     success:function(){
                         alert('Logged out');
                         localStorage.removeItem('token');
-                        window.location.href('login.html');
+                        window.location.href = 'login.html';
                     }
                 })
             });
