--- a/viewAll.html
+++ b/viewAll.html
@@ -117,7 +117,7 @@ $(document).ready(function () {
         headers: {'Token' : token},
         success: function(response){
         alert('Successfully marked task done');
-        location.reload();
+        window.location.reload();
         }
     })
 })
